fixed bugs on image cropping in peacekeeper page

--- a/src/app/Home/web/world-peacekeepers-movement/world-peacekeepers-movement.component.css
+++ b/src/app/Home/web/world-peacekeepers-movement/world-peacekeepers-movement.component.css
@@ -42,7 +42,7 @@
   font-family: "Quicksand", sans-serif;
   /* font-weight: 500;
   font-size: 20px; */
-  cursor: pointer;
+  /* cursor: pointer; */
   color: #0B0B0B;
   border: 1px dashed #8D8D8D;
   border-radius: 10px;
@@ -110,6 +110,35 @@
 .custom-file-input:active::before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
 }
+/* 
+.custom-file-input-isfile::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input-isSelected::before {
+  content: 'Clear Image';
+  color: #005A93;
+  display: inline-block;
+  background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #005A93;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+}
+.custom-file-input-isSelected:hover::before {
+  border-color: black;
+}
+.custom-file-input-isSelected:active {
+  outline: 0;
+}
+.custom-file-input-isSelected:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
+} */
 
 .iti {
   width: 100%;
